@@ -4,6 +4,8 @@ import io.github.carlos_emr.carlos.sms.SmsProviderType;
 import io.github.carlos_emr.carlos.sms.SmsStatus;
 
 import java.time.Instant;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 public record SmsDeliveryWebhookDto(
@@ -16,6 +18,8 @@ public record SmsDeliveryWebhookDto(
         Map<String, String> providerMetadata
 ) {
     public SmsDeliveryWebhookDto {
-        providerMetadata = providerMetadata == null ? Map.of() : Map.copyOf(providerMetadata);
+        providerMetadata = providerMetadata == null
+                ? Map.of()
+                : Collections.unmodifiableMap(new HashMap<>(providerMetadata));
     }
 }
